# atlantes

./: .cursorignore  .cursorrules  .dockerignore  .gitignore  README.md  convert_List_to_list.py  ruff.toml
ais/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ais/data/human_annotations/fishing_areas/: 2022_01_fishing_and_unknown_areas.geojson  2022_02_fishing_and_unknown_areas.geojson  2022_03_fishing_and_unknown_areas.geojson  2022_04_fishing_and_unknown_areas.geojson  2022_05_fishing_and_unknown_areas.geojson  2022_06_fishing_and_unknown_areas.geojson  (+30 more)
ais/docs/: dataset_creation.md  deployment.md  performance_tuning.md  training.md
ais/examples/: atlas_activity_request.py  atlas_entity_buoy_vessel_request.py  sample_response.json  sample_response_entity.json
ais/requirements/: requirements-dev.txt  requirements-test.txt  requirements.in  requirements.txt
ais/src/: atlas_buoy_vessel_beaker.yml  atlas_real_time_beaker.yml  atlas_vessel_pretrain_beaker.yml  beaker.yml  launch_beaker_experiment.py  main_activity.py  main_entity.py
ais/src/atlantes/: README.md  __init__.py  create_metadata_index_parquet.py  datautils.py  log_utils.py  rois.py  utils.py  visualize_single_track.py
ais/src/examples/: atlas_activity_request.py  atlas_entity_request.py  common.py  noaa_test_track.csv
ais/tests/: confirm_model_outputs_on_subpath_endpoint.py  conftest.py  test_convert_csv_to_parquet.py  test_launch_train_atlas_entity.py  test_main_activity.py  test_main_entity.py
ais/tests/unit/: test_utils.py
ais/tutorials/: eval.ipynb
(+130 files in other folders)
